[project]
name = "polimer"
version = "0.0.2"
authors = [
  { name="Aleksey Boev", email="boev.aleksey@gmail.com" },
]
description = "Automated callstack synthesis framework (annotations-based)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/aboev/polimer"
Issues = "https://github.com/aboev/polimer/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
